--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="text/javascript" src="sketch.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script type="text/javascript" src="js/sketch.js"></script>
   </head>
 
   <body>
